Clarity kütüphanesi kaldırıldı ve yerine Microsoft Clarity'nin script entegrasyonu eklendi. package.json ve package-lock.json dosyalarında gerekli güncellemeler yapıldı.

--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "NODE_TLS_REJECT_UNAUTHORIZED=0 next start",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@microsoft/clarity": "^1.0.0",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
